# MFF-UK-main

./: README.md
Articles-Site/: README.md
Articles-Site/cms/: index.php
Articles-Site/cms/App/: bootstrap.php
Articles-Site/cms/App/Configs/: db_config.php
Articles-Site/cms/App/Controllers/: controller_404.php  controller_article.php  controller_articles.php
Articles-Site/cms/App/api/: fetch-delete.php  fetch-dislike.php  fetch-like.php
Articles-Site/cms/App/core/: controller.php  model.php  mydb.php  route.php  view.php
Articles-Site/cms/App/models/: model_articles.php
Articles-Site/cms/App/views/: article-edit_view.php  article_view.php  articles_view.php  template_view.php
Articles-Site/cms/lib/: style.css
Articles-Site/cms/lib/js/: article_list.js
Linux/: README.md  countdown.sh  csv_calc.sh  dir.sh  factor.py  override.sh  plot.sh  row_sum.sh  scoring.sh  second_highest_uid.sh  sysinfo.sh  timeconv.sh  tree.py
Linux/21/: GRADING.md  album.tpl.html  gallery.sh
Linux/22/: GRADING.md  setup.cfg
Linux/22/src/templater/: .main.py.swp  main.py
Linux/tapsum2json/: setup.cfg
Linux/tapsum2json/src/tapsum2json/: .tapsum2json.py.swp  tapsum2json.py
Pacman/: README.md
Pacman/Assets/Scenes/: Pacman.unity
Pacman/Assets/Scenes/Prefabs/: Ball.prefab  Big_Ball.prefab  Ghost-blue.prefab  Ghost-orange.prefab  Ghost-pink.prefab  Ghost-red.prefab  (+3 more)
Pacman/PacmanGame/Pacman_Data/: globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
Sudoku/: README.md
Year-Project/: README.md
(+124 files in other folders)
